# base-compiler

./: .gitattributes  .gitmodules  CMakeLists.txt  README.md  build_win32.cmd  open_msvc2022_32.cmd  open_msvc2022_64.cmd
cmake/: dependencies.cmake  win32_all.cmd  win32_bc45_debug.cmd  win32_bc45_release.cmd  win32_html5_debug.cmd  win32_html5_release.cmd  win32_linux64_debug.cmd  win32_linux64_release.cmd  win32_mingw32_debug.cmd  win32_mingw32_release.cmd  win32_mingw64_debug.cmd  win32_mingw64_release.cmd  win32_msvc2022_32.cmd  win32_msvc2022_64.cmd  win32_watcom10_debug.cmd  win32_watcom10_release.cmd
cmake/buildtool/: buildtool.cmake  dependencies.cmake
src/: CMakeLists.txt  main.c
src/drunkfly/: compiler.c  compiler.h
src/drunkfly/compiler/: _codegen_template  arena.c  arena.h  bundle.c  bundle.h  cg_boot.c  codegen.c  codegen.h  lexer.h  lexer.re  parser.h  parser.ske  parser.y  private.h  semantic.c  semantic.h  token.h
tests/: CMakeLists.txt  bootstrp.lua  conf-in.h  l_main.lua  l_num1.lua  l_num10.lua  l_num16.lua  l_num8.lua  l_octal.lua  l_str.lua  main.c  p_attr.lua  p_class.lua  p_enum.lua  p_expr.lua  p_iface.lua  p_main.lua  p_stmt.lua  p_types.lua  parsercb.h  test.c  tests.h  util.c
tools/: CMakeLists.txt
tools/btyacc/: .gitattributes  CMakeLists.txt  btyaccpa.ske  error.c  mkpar.c  output.c
tools/btyacc/cmake/: skel2c.cmake
tools/re2c/: .gitattributes  CMakeLists.txt
tools/re2c/bootstrap/src/: default_syntax_c.h  default_syntax_d.h  default_syntax_go.h  default_syntax_haskell.h  default_syntax_java.h  default_syntax_js.h  default_syntax_ocaml.h  default_syntax_python.h  default_syntax_rust.h  default_syntax_v.h  default_syntax_zig.h
tools/re2c/bootstrap/src/msg/: ver_to_vernum.cc
tools/re2c/bootstrap/src/options/: parse_opts.cc
tools/re2c/bootstrap/src/parse/: conf_parser.cc  lexer.cc  lexer.h  parser.cc
tools/re2c/cmake/: Re2cCompilerFlags.cmake
tools/re2c/include/syntax/: c
tools/re2c/src/: constants.h  main.cc
tools/re2c/src/adfa/: adfa.cc  adfa.h
tools/re2c/src/cfg/: cfg.cc  cfg.h  freeze.cc  interfere.cc  optimize.cc  rename.cc  varalloc.cc
tools/re2c/src/codegen/: code.h  helpers.h  output.cc  output.h  pass1_analyze.cc  pass2_generate.cc  pass3_fixup.cc  pass4_render.cc
tools/re2c/src/dfa/: closure.cc  closure_leftmost.h  closure_posix.h  dead_rules.cc  determinization.cc  determinization.h  dfa.h  fallback_tags.cc  fillpoints.cc  find_state.cc  minimization.cc  posix_precedence.h  tag_history.h  tagver_table.h  tcmd.cc  tcmd.h
tools/re2c/src/encoding/: ebcdic.cc  enc.cc  enc.h  range_suffix.cc  range_suffix.h  utf16.cc  utf16.h  utf8.cc  utf8.h
tools/re2c/src/msg/: location.h  msg.cc  ver_to_vernum.re  warn.cc
tools/re2c/src/nfa/: nfa.h  re_to_nfa.cc
tools/re2c/src/options/: opt.cc  opt.h  parse_opts.re  symtab.cc  symtab.h
tools/re2c/src/parse/: ast.cc  ast.h  conf_parser.ypp  input.cc  input.h  lexer.re  parser.ypp
tools/re2c/src/regexp/: ast_to_re.cc  default_tags.cc  fixed_tags.cc  nullable.cc  regexp.h  rule.h  split_charset.cc  tag.h
tools/re2c/src/skeleton/: control_flow.cc  generate_code.cc  generate_data.cc  maxpath.cc  mtag_trie.h  skeleton.cc  skeleton.h
tools/re2c/src/util/: allocator.h  containers.h  file_utils.cc  hash32.h  range.cc  range.h  string_utils.cc  string_utils.h
